--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -6,3 +6,6 @@
 'Description': 'Description'
 'Submit': 'Description'
 'Delete': 'Delete'
+'Edit': 'Edit'
+'Create': 'Create'
+Data successfully updated: 'Data successfully updated'
